Adding  and  config

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Around the World</title>
 </head>
+
 <body>
     <nav>
         <ul>
-            
+            <li>Home</li>
+            <li>About Us</li>
+            <li>Contact Us</li>
+            <li><input></li>
+            <li><button>Search</button></li>
+            <li><button>Reset</button></li>
         </ul>
     </nav>
-    
+
 </body>
+
 </html>
