--- a/about_us.html
+++ b/about_us.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Around the World - About Us</title>
+    <link rel="stylesheet" href="./travel_recommendation.css">
 </head>
 <body>
+    <nav>
+        <div id="logo">
+            <img src="logo.png">
+            <h2>Around the World</h2>
+        </div>
+        <ul class="ul-navbar" id="ul-center">
+            <li><a href="./travel_recommendation.html">Home</a></li>
+            <li><a href="./about_us.html">About Us</a></li>
+            <li><a href="./contact_us.html">Contact Us</a></li>
+        </ul>
+        <ul class="ul-navbar" id="ul-right">
+            <li><input type="text" id="" placeholder="Enter a destination keyword"></li>
+            <li><button>Search</button></li>
+            <li><button>Reset</button></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
