--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -5,19 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Around the World</title>
+    <link rel="stylesheet" href="./travel_recommendation.css">
 </head>
 
 <body>
     <nav>
-        <ul>
-            <li>Home</li>
-            <li>About Us</li>
-            <li>Contact Us</li>
-            <li><input></li>
+        <div id="logo">
+            <img src="logo.png">
+            <h2>Around the World</h2>
+        </div>
+        <ul class="ul-navbar" id="ul-center">
+            <li><a href="./travel_recommendation.html">Home</a></li>
+            <li><a href="./about_us.html">About Us</a></li>
+            <li><a href="./contact_us.html">Contact Us</a></li>
+        </ul>
+        <ul class="ul-navbar" id="ul-right">
+            <li><input type="text" id="" placeholder="Enter a destination keyword"></li>
             <li><button>Search</button></li>
             <li><button>Reset</button></li>
         </ul>
     </nav>
+
+    <div>
+        <h1>Live the experience</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tristique odio orci, sed dictum eros fermentum sit amet. Cras at orci at tortor condimentum semper. Donec euismod diam vel tortor.</p>
+    </div>
+    <div>
+        
+    </div>
 
 </body>
 
