--- a/about_us.html
+++ b/about_us.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Around the World - About Us</title>
-    <link rel="stylesheet" href="./travel_recommendation.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Around the World</title>
+        <link rel="stylesheet" href="./travel_recommendation.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Arsenal+SC:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet">
+        <style>
+            body {
+                font-family: "Trirong", serif;
+            }
+        </style>
+    </head>
 <body>
     <nav>
         <div id="logo">
@@ -19,10 +30,12 @@
         </ul>
         <ul class="ul-navbar" id="ul-right">
             <li><input type="text" id="" placeholder="Enter a destination keyword"></li>
-            <li><button>Search</button></li>
-            <li><button>Reset</button></li>
+            <li><button onclick="searchInfo()">Search</button></li>
+            <li><button onclick="resetInfo()">Reset</button></li>
         </ul>
     </nav>
-    
+
+
+    <script src="./travel_recommendation.js"></script>
 </body>
 </html>
