--- a/contact_us.html
+++ b/contact_us.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Around the World - Contact Us</title>
+    <title>Around the World</title>
     <link rel="stylesheet" href="./travel_recommendation.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Arsenal+SC:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <style>
+        body {
+            font-family: "Trirong", serif;
+        }
+    </style>
 </head>
+
 <body>
     <nav>
         <div id="logo">
@@ -19,9 +32,36 @@
         </ul>
         <ul class="ul-navbar" id="ul-right">
             <li><input type="text" id="" placeholder="Enter a destination keyword"></li>
-            <li><button>Search</button></li>
-            <li><button>Reset</button></li>
+            <li><button onclick="searchInfo()">Search</button></li>
+            <li><button onclick="resetInfo()">Reset</button></li>
         </ul>
     </nav>
+
+    <div class="content-parent" style="border: solid 1px yellow;">
+        <div class="content-child left" style="border: solid 1px red;">
+            <h1 class="content-text">Contact Us</h1>
+            <p class="content-text">Feel free to contact us to get in touch.</p>
+        </div>
+        <div class="content-child right" style="border: solid 1px blue;">
+            <form id="contactForm">
+                <div>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Enter your name">
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Enter your email">
+                </div>
+                <div>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" placeholder="Enter your message"></textarea>
+                </div>
+                <button type="submit" onclick="thankyou()">Submit</button>
+            </form>
+        </div>
+    </div>
+
+    <script src="./travel_recommendation.js"></script>
 </body>
+
 </html>
