Refactor index page

--- a/contact_us.html
+++ b/contact_us.html
@@ -66,7 +66,7 @@
             <h2>Around the World</h2>
         </div>
         <ul class="ul-navbar" id="ul-center">
-            <li><a href="./travel_recommendation.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about_us.html">About Us</a></li>
             <li><a href="./contact_us.html">Contact Us</a></li>
         </ul>
