--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><button id="resetBtn" onclick="resetInfo()">Clear</button></li>
         </ul>
         <ul class="ul-navbar" id="ul-center">
-            <li><a href="./travel_recommendation.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about_us.html">About Us</a></li>
             <li><a href="./contact_us.html">Contact Us</a></li>
         </ul>
